--- a/Redux-todos-project/index.html
+++ b/Redux-todos-project/index.html
@@ -5,7 +5,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
   <script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>  
+  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+  <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>  
 </head>
 <body>
 
@@ -22,6 +23,7 @@
         const TOGGLE_TODO = 'TOGGLE_TODO'
         const ADD_GOAL = 'ADD_GOAL'
         const REMOVE_GOAL = 'REMOVE_GOAL'
+        const RECEIVE_DATA = 'RECEIVE_DATA'
 
         function addTodoAction (todo) {
             return {
@@ -57,6 +59,15 @@
                 id
             }
         }
+
+        function receiveDataAction (todos, goals) {
+            return {
+                type: RECEIVE_DATA,
+                  todos,
+                  goals
+            }
+        }
+
         function todos (state = [], action) {
             switch(action.type){
                 case ADD_TODO : 
@@ -67,6 +78,8 @@
                     //Make a new array with mapping to keep the function pure
                     return state.map((todo) => todo.id !== action.id ? todo : 
                         Object.assign({}, todo, { complete: !todo.complete }))
+                case RECEIVE_DATA :
+                    return action.todos        
                 default :
                     return state         
             }
@@ -78,10 +91,22 @@
                     return state.concat([action.goal])
                 case REMOVE_GOAL: 
                     return state.filter((goal) => goal.id !== action.id)
+                case RECEIVE_DATA :
+                    return action .goals      
                 default : 
                     return state    
             }
         }
+
+        function loading (state = true, action) {
+            switch(action.type) {
+                case RECEIVE_DATA : 
+                    return false
+                default :
+                    return state
+            }
+        }
+
         const checker = (store) => (next) => (action) => {
             if (
                 action.type === ADD_TODO && 
@@ -108,7 +133,8 @@
         }
         const store = Redux.createStore(Redux.combineReducers({
             todos, 
-            goals
+            goals,
+            loading,
         }), Redux.applyMiddleware(checker, logger))
 
     </script>
@@ -207,10 +233,21 @@
             componentDidMount () {
                 const { store } = this.props
                 store.subscribe(() => this.forceUpdate())
+                
+                Promise.all([
+                    API.fetchTodos(), 
+                    API.fetchGoals()
+                ]).then(([ todos, goals]) => {
+                   store.dispatch(receiveDataAction(todos, goals))
+                })
             }
             render() {
                 const { store } = this.props
-                const { todos, goals } = store.getState()
+                const { todos, goals, loading } = store.getState()
+
+                if (loading === true){
+                    return <h3>Loading</h3>
+                }
                 return (
                     <div>
                         <Todos todos={todos} store={this.props.store}/>
